--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,24 @@
-arthagyan_frontend/eslint.config.js
-arthagyan_frontend/package.json
-arthagyan_frontend/package-lock.json
-arthagyan_frontend/vite.config.js
-.gitattributes
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
